fix gap of hidden menu on mobile

--- a/app/app.styl
+++ b/app/app.styl
@@ -55,8 +55,9 @@ th
   left: 0
   width: 200px
 
-.has-side-menu
-  margin-left: 200px
+@media (min-width: 52em)
+  .has-side-menu
+    margin-left: 200px
 
 .content
   margin-top: 52px
